--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["cdylib"]
 tracing = "0.1"
 tracing-web = "0.1"
 tracing-subscriber = { version = "0.3", features=['time', 'json'] }
+time = { version = "0.3", features = ["wasm-bindgen"]}
 
 worker = { version = "0.6", features = ['http', 'axum', "timezone", "tokio-postgres"] }
 worker-macros = { version = "0.6", features = ['http'] }
